--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,5 @@
 <div id="footer">
-                <hr />
-                <div class="container">
-                    <p class="muted credit">&copy; 2019 - {{site.time | date: '%Y'}} 
-                        <a href="{{ site.baseurl }}/contact/">Damage Control Studio</a>. All rights reserved.
-                    </p>
-                </div>
-            </div>
+    <div class="alert alert-warning" role="alert">
+        &copy; 2019 - {{site.time | date: '%Y'}} <a href="{{ site.baseurl }}/contact/">Damage Control Studio</a>. All rights reserved.
+    </div>
+</div>
