添加阴影以及文章列表挂件

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-default">
+<nav class="navbar navbar-default shadow">
     <div class="container-fluid">
         <div class="navbar-header">
             <button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".bs-navbar-collapse">
@@ -6,7 +6,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="{{ site.baseurl }}/">
+            <a class="navbar-brand" href="{{site.baseurl}}/">
                 控损 <small>工作室</small>
             </a>
         </div>
@@ -15,14 +15,14 @@
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">神经网络<b class="caret"></b></a>
                     <ul class="dropdown-menu">
-                        <li><a href="{{ site.baseurl }}/E0-CCPD/">E#0 车牌识别</a></li>
+                        <li><a href="{{site.baseurl}}/E0-CCPD/">E#0 车牌识别</a></li>
                     </ul>
                 </li>
                 <li>
-                    <a href="{{ site.baseurl }}/essay/">笔记</a>
+                    <a href="{{site.baseurl}}/essay/">笔记</a>
                 </li>
                 <li>
-                    <a href="{{ site.baseurl }}/contact/">联系我们</a>
+                    <a href="{{site.baseurl}}/contact/">联系我们</a>
                 </li>
             </ul>
         </div>
