--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,8 +10,8 @@
 	</head>
 	<body>
 		{% include nav.html %}
-		<div id="bodyindent">
-        	{{ content }}
+		<div class="bodyindent">
+        	{{content}}
 			{% include footer.html %}
 		</div>
 	</body>
