--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,22 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link rel="shortcut icon" href="/favicon.ico">
 <title>控损 | Damage Control Studio</title>
-<link rel="stylesheet" href="{{ site.baseurl }}/css/bootstrap.min.css" />
-<script src="{{ site.baseurl }}/js/jquery.min.js"></script>
-<script src="{{ site.baseurl }}/js/bootstrap.min.js"></script>
-<style> #bodyindent { padding-left: 2%; padding-right: 2%; } img { max-width: 100%;}</style>
+<link rel="stylesheet" href="{{site.baseurl}}/css/bootstrap.min.css" />
+<script src="{{site.baseurl}}/js/jquery.min.js"></script>
+<script src="{{site.baseurl}}/js/bootstrap.min.js"></script>
+<style>
+    img { 
+        max-width: 100%;
+    }
+    .bodyindent { 
+        padding-left: 2%; 
+        padding-right: 2%; 
+    }
+    .jumbotron-center {
+        background-color: white;
+        text-align: center;
+    }
+    .shadow {
+        box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
+    }
+</style>
