隐藏滚动条

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,6 +6,9 @@
 <script src="{{site.baseurl}}/js/jquery.min.js"></script>
 <script src="{{site.baseurl}}/js/bootstrap.min.js"></script>
 <style>
+    html {
+        overflow: hidden;
+    }
     img { 
         max-width: 100%;
     }
