--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,6 +6,15 @@
 <script src="{{site.baseurl}}/js/jquery.min.js"></script>
 <script src="{{site.baseurl}}/js/bootstrap.min.js"></script>
 <style>
+    html {
+        overflow: scroll;
+        scrollbar-width: none; /* Firefox */
+        -ms-overflow-style: none; /* IE 10+ */
+    }
+    html::-webkit-scrollbar { /* WebKit */
+        width: 0;
+        height: 0;
+    }
     img { 
         max-width: 100%;
     }
