--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,32 +1,8 @@
-<meta charset="utf-8" />
+<meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<link rel="shortcut icon" href="/favicon.ico">
 <title>控损 | Damage Control Studio</title>
+<link rel="shortcut icon" href="{{site.baseurl}}/favicon.ico" />
 <link rel="stylesheet" href="{{site.baseurl}}/css/bootstrap.min.css" />
+<link rel="stylesheet" href="{{site.baseurl}}/css/profstyle.css" />
 <script src="{{site.baseurl}}/js/jquery.min.js"></script>
 <script src="{{site.baseurl}}/js/bootstrap.min.js"></script>
-<style>
-    html {
-        overflow: scroll;
-        scrollbar-width: none; /* Firefox */
-        -ms-overflow-style: none; /* IE 10+ */
-    }
-    html::-webkit-scrollbar { /* WebKit */
-        width: 0;
-        height: 0;
-    }
-    img { 
-        max-width: 100%;
-    }
-    .bodyindent { 
-        padding-left: 2%; 
-        padding-right: 2%; 
-    }
-    .jumbotron-center {
-        background-color: white;
-        text-align: center;
-    }
-    .shadow {
-        box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
-    }
-</style>
