--- a/css/profstyle.css
+++ b/css/profstyle.css
@@ -1,12 +1,12 @@
-html {
+/* html {
     overflow: scroll;
-    scrollbar-width: none; /* Firefox */
-    -ms-overflow-style: none; /* IE 10+ */
+    scrollbar-width: none;
+    -ms-overflow-style: none;
 }
-html::-webkit-scrollbar { /* WebKit */
+html::-webkit-scrollbar {
     width: 0;
     height: 0;
-}
+} */
 img { 
     max-width: 100%;
 }
