调整一些样式

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,6 +11,6 @@ layout: compress
 {{content}}
 </div>
 
-<link href="//maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+<link href="https:////maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 </body>
 </html>
