--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -9,7 +9,7 @@
 body {
          background: #fff;
          font-family: $base-font-family;
-         font-size: 15px;
+        //  font-size: 15px;
          font-weight: 300;
          overflow-x: hidden;
          color: $text-color;
@@ -21,17 +21,17 @@ body {
 }
 
 
-::-webkit-scrollbar {
-    -webkit-appearance: none;
-    height: 5px;
-    width: 10px;
-}
-::-webkit-scrollbar-thumb {
-    background-color: $text-color;
-}
-::-webkit-scrollbar-track {
-    background-color: #EEE;
-}
+// ::-webkit-scrollbar {
+//     -webkit-appearance: none;
+//     height: 5px;
+//     width: 10px;
+// }
+// ::-webkit-scrollbar-thumb {
+//     background-color: $text-color;
+// }
+// ::-webkit-scrollbar-track {
+//     background-color: #EEE;
+// }
 
 
 a {
