--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -95,7 +95,7 @@
 .box {
     margin: 0 10px 15px 0;
     display: inline-block;
-/*     width: 100%; */
+    width: 95%; 
     border-radius: 4px;
     box-shadow: 2px 2px 4px #aaa;
     -webkit-box-shadow: 2px 2px 4px #aaa; 
