--- a/_includes/mininav.html
+++ b/_includes/mininav.html
@@ -1,12 +1,22 @@
 <!-- 导航 -->
-<hr>
-<i class="fa fa-bars" aria-hidden="true"></i>
-<a href="/index.html">控损工作室</a> - 
-<a href="/blog.html">思考奇</a> | 
-<!-- 交流信箱  -->
-<i class="fa fa-envelope-o" aria-hidden="true"></i>
-<script>
-    document.write(String.fromCharCode(103,108,105,111,98,108,97,115,116,64,111,117,116,108,111,111,107,46,99,111,109));
-</script>
-<hr>
+<div>
+    <hr style="border: 0; background-color: #ddd; height: 1px;">
+    <i class="fa fa-navicon" aria-hidden="true"></i>
+    <a href="/index.html">控损工作室</a>
+    <i class="fa fa-angle-right" aria-hidden="true"></i>
+    <a href="/blog.html">思考奇</a>
+     ┊ 
+    <i class="fa fa-github" aria-hidden="true"></i>
+    <a href="https://github.com/damagecontrolstudio" target="_blank">GitHub</a>
+     ┊ 
+    <i class="fa fa-envelope-o" aria-hidden="true"></i>
+    <a id="mail_addr" href="mailto:">
+        <script>
+            var mail_str = String.fromCharCode(103,108,105,111,98,108,97,115,116,64,111,117,116,108,111,111,107,46,99,111,109);
+            document.write(mail_str);
+            document.getElementById("mail_addr").href = "mailto:" + mail_str
+        </script>
+    </a>
+    <hr style="border: 0; background-color: #ddd; height: 1px;">
+</div>
 <!-- / 导航 -->
