--- a/_sass/_syntax-highlighting.scss
+++ b/_sass/_syntax-highlighting.scss
@@ -2,7 +2,8 @@
  * Syntax highlighting styles
  */
 .highlight {
-
+    background: #fff;
+    
     .highlighter-rouge & {
       background: #fff;
     }
