--- a/_includes/mininav.html
+++ b/_includes/mininav.html
@@ -4,7 +4,9 @@
     <i class="fa fa-navicon" aria-hidden="true"></i>
     <a href="/index.html">控损工作室</a>
     <i class="fa fa-angle-right" aria-hidden="true"></i>
-    <a href="/blog.html">思考奇</a>
+    <a href="/blog.html">博客</a>
+    <i class="fa fa-angle-right" aria-hidden="true"></i>
+    <a href="https://www.sikao.ml" target="_blank">思考奇</a>
      ┊ 
     <i class="fa fa-github" aria-hidden="true"></i>
     <a href="https://github.com/damagecontrolstudio" target="_blank">GitHub</a>
