调整标题大小

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<div class="page-container" style="zoom:120%;">
+<div class="page-container">
     <div class="content" >
     <article>
         <h1 class="page-title">{{page.title}}</h1>
