--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,6 +11,6 @@ layout: compress
 {{content}}
 </div>
 
-<link href="https:////maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+<link href="https://cdn.bootcdn.net/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 </body>
 </html>
