调整导航样式，避免误导

--- a/_includes/mininav.html
+++ b/_includes/mininav.html
@@ -1,11 +1,13 @@
 <!-- 导航 -->
 <div>
     <hr style="border: 0; background-color: #ddd; height: 1px;">
-    <i class="fa fa-navicon" aria-hidden="true"></i>
+    <!-- <i class="fa fa-navicon" aria-hidden="true"></i> -->
     <a href="/index.html">控损工作室</a>
-    <i class="fa fa-angle-right" aria-hidden="true"></i>
+    <!-- <i class="fa fa-angle-right" aria-hidden="true"></i> -->
+     ┊ 
     <a href="/blog.html">博客</a>
-    <i class="fa fa-angle-right" aria-hidden="true"></i>
+    <!-- <i class="fa fa-angle-right" aria-hidden="true"></i> -->
+     ┊ 
     <a href="https://www.sikao.ml" target="_blank">思考奇</a>
      ┊ 
     <i class="fa fa-github" aria-hidden="true"></i>
